--- a/Index.html
+++ b/Index.html
@@ -15,5 +15,10 @@
         010-3545-7033
         송파구 삼전동
     </div>
+    <div>
+        숭수
+        010-3545-1212
+        송파구 구구구
+    </div>
 </body>
 </html>
